--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -57,22 +57,27 @@ jobs:
                 npx jsr publish
               working-directory: packages/core
               if: ${{ steps.release.outputs['packages/core--release_created'] }}
+              
+            # Generates the social media post
+            - run: npx @humanwhocodes/social-changelog --org humanwhocodes --repo humanfs --name "humanfs/core" --tag ${{ steps.release.outputs['packages/core--tag_name'] }} > social-post.txt
+              if: ${{ steps.release.outputs.release_created }}
+              env:
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-            - name: Tweet Release Announcement
-              run: npx @humanwhocodes/tweet "humanfs/core v${{ steps.release.outputs['packages/core--major'] }}.${{ steps.release.outputs['packages/core--minor'] }}.${{ steps.release.outputs['packages/core--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/core--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/core--release_created'] }}
+            # Tweets out release announcement
+            - run: 'npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt'
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            
-            - name: Toot Release Announcement
-              run: npx @humanwhocodes/toot "humanfs/core v${{ steps.release.outputs['packages/core--major'] }}.${{ steps.release.outputs['packages/core--minor'] }}.${{ steps.release.outputs['packages/core--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/core--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/core--release_created'] }}
-              env:
-                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                  TWITTER_API_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                  TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+                  MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                  MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  BLUESKY_HOST: ${{ vars.BLUESKY_HOST }}
+                  BLUESKY_IDENTIFIER: ${{ vars.BLUESKY_IDENTIFIER }}
+                  BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
+                  LINKEDIN_ACCESS_TOKEN: ${{ secrets.LINKEDIN_ACCESS_TOKEN }}
 
             #-----------------------------------------------------------------------------
             # @humanfs/test
@@ -103,22 +108,28 @@ jobs:
               if: ${{ steps.release.outputs['packages/node--release_created'] }}
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+                  
 
-            - name: Tweet Release Announcement
-              run: npx @humanwhocodes/tweet "humanfs/node v${{ steps.release.outputs['packages/node--major'] }}.${{ steps.release.outputs['packages/node--minor'] }}.${{ steps.release.outputs['packages/node--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/node--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/node--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+            # Generates the social media post
+            - run: npx @humanwhocodes/social-changelog --org humanwhocodes --repo humanfs --name "humanfs/node" --tag ${{ steps.release.outputs['packages/node--tag_name'] }} > social-post.txt
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            
-            - name: Toot Release Announcement
-              run: npx @humanwhocodes/toot "humanfs/node v${{ steps.release.outputs['packages/node--major'] }}.${{ steps.release.outputs['packages/node--minor'] }}.${{ steps.release.outputs['packages/node--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/node--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/node--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+            # Tweets out release announcement
+            - run: 'npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt'
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                  TWITTER_API_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                  TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+                  MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                  MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  BLUESKY_HOST: ${{ vars.BLUESKY_HOST }}
+                  BLUESKY_IDENTIFIER: ${{ vars.BLUESKY_IDENTIFIER }}
+                  BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
+                  LINKEDIN_ACCESS_TOKEN: ${{ secrets.LINKEDIN_ACCESS_TOKEN }}                  
 
             #-----------------------------------------------------------------------------
             # @humanfs/memory
@@ -137,22 +148,28 @@ jobs:
               working-directory: packages/memory
               if: ${{ steps.release.outputs['packages/memory--release_created'] }}
 
-            - name: Tweet Release Announcement
-              run: npx @humanwhocodes/tweet "humanfs/memory v${{ steps.release.outputs['packages/memory--major'] }}.${{ steps.release.outputs['packages/memory--minor'] }}.${{ steps.release.outputs['packages/memory--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/memory--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/memory--release_created']  && !steps.release.outputs['packages/core--release_created'] }}
-              env:
-                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            
-            - name: Toot Release Announcement
-              run: npx @humanwhocodes/toot "humanfs/memory v${{ steps.release.outputs['packages/memory--major'] }}.${{ steps.release.outputs['packages/memory--minor'] }}.${{ steps.release.outputs['packages/memory--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/memory--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/memory--release_created']  && !steps.release.outputs['packages/core--release_created'] }}
-              env:
-                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
 
+            # Generates the social media post
+            - run: npx @humanwhocodes/social-changelog --org humanwhocodes --repo humanfs --name "humanfs/memory" --tag ${{ steps.release.outputs['packages/memory--tag_name'] }} > social-post.txt
+              if: ${{ steps.release.outputs.release_created }}
+              env:
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+            # Tweets out release announcement
+            - run: 'npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt'
+              if: ${{ steps.release.outputs.release_created }}
+              env:
+                  TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                  TWITTER_API_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                  TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+                  MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                  MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  BLUESKY_HOST: ${{ vars.BLUESKY_HOST }}
+                  BLUESKY_IDENTIFIER: ${{ vars.BLUESKY_IDENTIFIER }}
+                  BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
+                  LINKEDIN_ACCESS_TOKEN: ${{ secrets.LINKEDIN_ACCESS_TOKEN }}
+              
             #-----------------------------------------------------------------------------
             # @humanfs/web
             #-----------------------------------------------------------------------------
@@ -163,21 +180,26 @@ jobs:
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
-            - name: Tweet Release Announcement
-              run: npx @humanwhocodes/tweet "humanfs/web v${{ steps.release.outputs['packages/web--major'] }}.${{ steps.release.outputs['packages/web--minor'] }}.${{ steps.release.outputs['packages/web--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/web--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/web--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+            # Generates the social media post
+            - run: npx @humanwhocodes/social-changelog --org humanwhocodes --repo humanfs --name "humanfs/web" --tag ${{ steps.release.outputs['packages/web--tag_name'] }} > social-post.txt
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            
-            - name: Toot Release Announcement
-              run: npx @humanwhocodes/toot "humanfs/web v${{ steps.release.outputs['packages/web--major'] }}.${{ steps.release.outputs['packages/web--minor'] }}.${{ steps.release.outputs['packages/web--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/web--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/web--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+            # Tweets out release announcement
+            - run: 'npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt'
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                  TWITTER_API_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                  TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+                  MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                  MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  BLUESKY_HOST: ${{ vars.BLUESKY_HOST }}
+                  BLUESKY_IDENTIFIER: ${{ vars.BLUESKY_IDENTIFIER }}
+                  BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
+                  LINKEDIN_ACCESS_TOKEN: ${{ secrets.LINKEDIN_ACCESS_TOKEN }}                  
 
             #-----------------------------------------------------------------------------
             # @humanfs/box
@@ -196,21 +218,26 @@ jobs:
               working-directory: packages/box
               if: ${{ steps.release.outputs['packages/box--release_created'] }}
 
-            - name: Tweet Release Announcement
-              run: npx @humanwhocodes/tweet "humanfs/box v${{ steps.release.outputs['packages/box--major'] }}.${{ steps.release.outputs['packages/box--minor'] }}.${{ steps.release.outputs['packages/box--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/box--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/box--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+            # Generates the social media post
+            - run: npx @humanwhocodes/social-changelog --org humanwhocodes --repo humanfs --name "humanfs/box" --tag ${{ steps.release.outputs['packages/box--tag_name'] }} > social-post.txt
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            
-            - name: Toot Release Announcement
-              run: npx @humanwhocodes/toot "humanfs/box v${{ steps.release.outputs['packages/box--major'] }}.${{ steps.release.outputs['packages/box--minor'] }}.${{ steps.release.outputs['packages/box--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/box--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/box--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+            # Tweets out release announcement
+            - run: 'npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt'
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                  TWITTER_API_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                  TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+                  MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                  MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  BLUESKY_HOST: ${{ vars.BLUESKY_HOST }}
+                  BLUESKY_IDENTIFIER: ${{ vars.BLUESKY_IDENTIFIER }}
+                  BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
+                  LINKEDIN_ACCESS_TOKEN: ${{ secrets.LINKEDIN_ACCESS_TOKEN }}
 
             #-----------------------------------------------------------------------------
             # @humanfs/deno
@@ -229,19 +256,25 @@ jobs:
                 npx jsr publish --allow-dirty
               working-directory: packages/deno
               if: ${{ steps.release.outputs['packages/deno--release_created'] }}
+              
 
-            - name: Tweet Release Announcement
-              run: npx @humanwhocodes/tweet "humanfs/deno v${{ steps.release.outputs['packages/deno--major'] }}.${{ steps.release.outputs['packages/deno--minor'] }}.${{ steps.release.outputs['packages/deno--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/deno--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/deno--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+            # Generates the social media post
+            - run: npx @humanwhocodes/social-changelog --org humanwhocodes --repo humanfs --name "humanfs/deno" --tag ${{ steps.release.outputs['packages/deno--tag_name'] }} > social-post.txt
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-                TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-                TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
-                TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-            
-            - name: Toot Release Announcement
-              run: npx @humanwhocodes/toot "humanfs/deno v${{ steps.release.outputs['packages/deno--major'] }}.${{ steps.release.outputs['packages/deno--minor'] }}.${{ steps.release.outputs['packages/deno--patch'] }} has been released!\n\n${{ github.event.repository.html_url }}/releases/tag/${{ steps.release.outputs['packages/deno--tag_name'] }}"
-              if: ${{ steps.release.outputs['packages/deno--release_created'] && !steps.release.outputs['packages/core--release_created'] }}
+                  OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+            # Tweets out release announcement
+            - run: 'npx @humanwhocodes/crosspost -t -b -m -l --file social-post.txt'
+              if: ${{ steps.release.outputs.release_created }}
               env:
-                MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
-                MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  TWITTER_API_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
+                  TWITTER_API_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
+                  TWITTER_ACCESS_TOKEN_KEY: ${{ secrets.TWITTER_ACCESS_TOKEN_KEY }}
+                  TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
+                  MASTODON_ACCESS_TOKEN: ${{ secrets.MASTODON_ACCESS_TOKEN }}
+                  MASTODON_HOST: ${{ secrets.MASTODON_HOST }}
+                  BLUESKY_HOST: ${{ vars.BLUESKY_HOST }}
+                  BLUESKY_IDENTIFIER: ${{ vars.BLUESKY_IDENTIFIER }}
+                  BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
+                  LINKEDIN_ACCESS_TOKEN: ${{ secrets.LINKEDIN_ACCESS_TOKEN }}
