--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -47,10 +47,10 @@
     "@types/node": "^20.9.4",
     "mocha": "^10.2.0",
     "typescript": "^5.2.2",
-    "@humanfs/test": "^0.15.0",
-    "@humanfs/types": "^0.15.0"
+    "@humanfs/test": "^0.15.0"
   },
   "dependencies": {
-    "@humanfs/core": "^0.19.1"
+    "@humanfs/core": "^0.19.1",
+    "@humanfs/types": "^0.15.0
   }
 }
