--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,9 +44,11 @@
     "node": ">=18.18.0"
   },
   "devDependencies": {
-    "@humanfs/types": "^0.15.0",
     "c8": "^9.0.0",
     "mocha": "^10.2.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@humanfs/types": "^0.15.0"
   }
 }
