--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -47,12 +47,12 @@
   "devDependencies": {
     "@types/node": "^20.9.4",
     "@humanfs/test": "^0.15.0",
-    "@humanfs/types": "^0.15.0",
     "mocha": "^10.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@humanwhocodes/retry": "^0.4.0",
-    "@humanfs/core": "^0.19.1"
+    "@humanfs/core": "^0.19.1",
+    "@humanfs/types": "^0.15.0"
   }
 }
