--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -47,7 +47,6 @@
   },
   "devDependencies": {
     "@humanfs/test": "^0.15.0",
-    "@humanfs/types": "^0.15.0",
     "@wdio/browser-runner": "^8.40.5",
     "@wdio/cli": "8",
     "@wdio/mocha-framework": "^8.40.3",
@@ -57,6 +56,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@humanfs/core": "^0.19.1"
+    "@humanfs/core": "^0.19.1",
+    "@humanfs/types": "^0.15.0"
   }
 }
