--- a/packages/memory/package.json
+++ b/packages/memory/package.json
@@ -51,6 +51,6 @@
   },
   "dependencies": {
     "@humanfs/core": "^0.19.1",
-    "@humanfs/types": "^0.15.0
+    "@humanfs/types": "^0.15.0"
   }
 }
